Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0 Beta1
-
None
-
fdbacf2d5 (dev), 71f61f903 (6.7), bc1bdd0e1 (dev), 206a1fa2a (6.7), 6b8bf79a5 (6.7.0)
Description
So we can fix that: QQuickTextDocumentPrivate::load() can check editor->textFormat().
The next problem then is a sort of initialization race condition:
TextEdit {
textDocument.source: "whatever.md"
textFormat: TextEdit.PlainText
}
textFormat might not be set yet at the time that QQuickTextDocumentPrivate::load() runs. So it needs to be delayed. A workaround is to set source in Component.onCompleted.
Attachments
Issue Links
- resulted in
-
QTBUG-122985 toggling TextEdit.format back and forth between AutoText and PlainText loses markdown after a couple of times
-
- Closed
-