Add Flipable in note delegate, with plain-text editor on back side

So you can see and edit the raw markdown.

And this brings us to QTBUG-120772